# superscraper-freshrss

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.json
sidecar/: Dockerfile  pyproject.toml  requirements.txt
sidecar/app/: main.py
sidecar/app/bridge/: deploy.py  sftp_deploy.py
sidecar/app/discovery/: api_replay.py  cascade.py  date_anchor.py  embedded_json.py  example_anchored.py  graphql_detect.py  multi_field_anchor.py  network_intercept.py  node_scoring.py  rss_autodiscovery.py  scoring.py  scrapling_selectors.py  selector_generation.py  static_js_analysis.py
sidecar/app/llm/: __init__.py  analyzer.py  client.py  prompts.py
sidecar/app/models/: schemas.py
sidecar/tests/: conftest.py  test_analyzer.py  test_bridge_contract.py  test_bridge_deploy.py  test_bridge_flow.py  test_cascade_phase1.py  test_cascade_phase2.py  test_date_anchor.py  test_debug_recipe.py  test_embedded_json.py  test_example_anchored.py  test_fetch_dispatcher.py  test_fetch_dispatcher_remote.py  test_graphql_detect.py  test_graphql_probe_endpoint.py  test_inbound_auth.py  test_integration.py  test_llm_client.py  test_llm_json_split.py  test_mixed_blocks_xpath.py  test_multi_field_anchor.py  test_network_intercept.py  test_node_scoring.py  test_preview_endpoint.py  test_prompts.py  test_rss_and_xpath.py  test_rss_deadfeed.py  test_scoring.py  test_scrape_adaptive.py  test_scrape_config.py  test_scrape_config_idempotent.py  test_scrape_dot_get.py  test_scrape_endpoint.py  test_scrapling_selectors.py  test_selector_generation.py  test_services_config.py  test_skeleton.py
(+48 files in other folders)
