[project]
name = "autofeed-sidecar"
version = "0.6.0"
description = "AutoFeed Discovery sidecar for FreshRSS"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "scrapling>=0.4.6,<0.5.0",
    "playwright>=1.40.0",
    "lxml>=5.0.0,<6.0.0",
    "respx>=0.21.0",
    "feedparser>=6.0.10",
    "feedgen>=1.0.0",
    "slowapi>=0.1.5,<0.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"